chaos-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chaos-demo
  namespace: default
spec:
  selector:
    app: chaos-demo
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
